  * In India, some carriers transmit CID via dtmf. Some code has been added
    that will handle some situations. The cidstart=polarity_IN choice has been added for
    those carriers that transmit CID via dtmf after a polarity change.
  * CID matching information is now shown when doing 'dialplan show'.
  * Added zap show version CLI command to chan_zap.

H.323 Changes
-------------
  * H323 remote hold notification support added (by NOTIFY message
     and/or H.450 supplementary service)

Call Features (res_features) Changes
------------------------------------
  * Added the parkedcalltransfers option to features.conf
  * The built-in method for doing attended transfers has been updated to
     include some new options that allow you to have the transferee sent
     back to the person that did the transfer if the transfer is not successful.
     See the options "atxferdropcall", "atxferloopdelay", and "atxfercallbackretries"
     in features.conf.sample.
  * Added support for configuring named groups of custom call features in
     features.conf.  This means that features can be written a single time, and
     then mapped into groups of features for different key mappings or easier
     access control.

Language Support Changes
------------------------
  * Brazilian Portuguese (pt-BR) in VM, and say.c was added
  * Added support for the Hungarian language for saying numbers, dates, and times.

Miscellaneous 
-------------
  * Added the bindaddr option to gtalk.conf.
  * Argument support for Gosub application
  * Ability to set process limits without restarting Asterisk
  * Proper codec support in chan_skinny.
  * Ability to use libcap to set high ToS bits when non-root
     on Linux. If configure is unable to find libcap then you
     can use --with-cap to specify the path.
  * Added rotatetimestamp option to logger.conf which will use
     the time to name the logger files instead of sequence number.